--- a/notebooks/ exploration.ipynb
+++ b/notebooks/ exploration.ipynb
@@ -4645,7 +4645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "511ef23c",
    "metadata": {},
    "outputs": [
@@ -4673,9 +4673,9 @@
     "from tqdm import tqdm\n",
     "import urllib.parse\n",
     "\n",
-    "# ---------------------------------------------\n",
-    "# 🔍 1) TESTS DIRECTS (ce que tu veux afficher)\n",
-    "# ---------------------------------------------\n",
+    "\n",
+    "#  1) TESTS DIRECTS (ce que tu veux afficher)\n",
+    "\n",
     "\n",
     "response = requests.get(\"https://portail-api-data.montpellier3m.fr/ecocounter?limit=1000\")\n",
     "print(\"📌 Test 1 : Liste des compteurs :\")\n",
@@ -4689,9 +4689,9 @@
     "print(\"\\n📌 Test 2 : Timeseries pour un compteur :\")\n",
     "print(res.json())\n",
     "\n",
-    "# ---------------------------------------------\n",
-    "# ▶️ 2) PIPELINE OFFICIEL (avec les vraies données)\n",
-    "# ---------------------------------------------\n",
+    "\n",
+    "#  2) PIPELINE OFFICIEL (avec les vraies données)\n",
+    "\n",
     "\n",
     "ids = response.json()\n",
     "compteur_ids = [c[\"id\"] for c in ids]\n",
@@ -4703,9 +4703,9 @@
     "\n",
     "records = []\n",
     "\n",
-    "# ---------------------------------------------\n",
-    "# 🔁 3) Boucle sur tous les compteurs\n",
-    "# ---------------------------------------------\n",
+    "\n",
+    "#  3) Boucle sur tous les compteurs\n",
+    "\n",
     "for compteur_id in tqdm(compteur_ids):\n",
     "\n",
     "    full_id = f\"urn:ngsi-ld:EcoCounter:{compteur_id}\"\n",
@@ -4736,13 +4736,13 @@
     "            \"count\": value\n",
     "        })\n",
     "\n",
-    "# ---------------------------------------------\n",
-    "# 📊 4) DataFrame final\n",
-    "# ---------------------------------------------\n",
+    "\n",
+    "#  4) DataFrame final\n",
+    "\n",
     "df = pd.DataFrame(records)\n",
     "df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"])\n",
     "\n",
-    "print(\"\\n📌 Aperçu du DataFrame :\")\n",
+    "print(\"\\n Aperçu du DataFrame :\")\n",
     "print(df.head())\n",
     "print(\"Dimensions :\", df.shape)\n"
    ]
